tests/mm0_mmu/fail/bad-sort31.mm0
-- provable should be after pure
provable pure sort s31;